fix the padding in the navbar that was causing an overflow

--- a/app/scss/components/navbar.scss
+++ b/app/scss/components/navbar.scss
@@ -6,12 +6,10 @@
   background-color: var(--black);
   height: rem(40);
   font-size: rem(14);
-  
 
   @media screen and (max-width:768px) {
     display: none;
   }
-
 
   &__wrapper {
     height: 100%;
@@ -62,7 +60,6 @@
   margin-top: rem(16);
   margin-bottom: rem(16);
 
-
   &__logo {
     img {
       height: rem(80);
@@ -75,6 +72,10 @@
     list-style: none;
     letter-spacing: rem(2);
     font-weight: 400;
+
+    @media screen and (max-width: 500px) {
+      padding-left: 0px;
+    }
   }
 
   a {
@@ -87,60 +88,3 @@
   }
 }
 
-
-.nav-container {
-  display: flex;
-  width: 90%;
-  justify-content: space-between;
-  align-items: center;
-  margin: 0 50px;
-  height: 100px;
-}
-
-.links {
-  text-decoration: none;
-  color: white;
-  transition: all 0.5s ease;
-}
-
-.links:hover {
-  color: red;
-  border-bottom: 1px solid red;
-}
-
-.nav-links {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 400px;
-  list-style: none;
-  font-weight: 600;
-  
-  @media screen and (max-width: 768px) {
-    .logo {
-      margin-left: 40px;
-    }
-  
-    .nav-container {
-      height: 104px;
-      width: 100%;
-      margin: 0 auto;
-    }
-  
-    .nav-links {
-      margin-right: 0;
-      width: 50%;
-      position: absolute;
-      right: 0px;
-      height: 50vh;
-      top: 12.2vh;
-      background-color: #e74336;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: space-around;
-      transform: translateY(-150%);
-    }
-  
-  }
-}
